fix contract covered style

--- a/src/components/VaultEditor/index.scss
+++ b/src/components/VaultEditor/index.scss
@@ -215,5 +215,13 @@
                 }
             }
         }
+
+        .contracts-covered {
+            &__contract {
+                &-content {
+                    width: 100%;
+                }
+            }
+        }
     }
 }
